--- a/meta/main.yml
+++ b/meta/main.yml
@@ -8,7 +8,9 @@ galaxy_info:
   platforms:
     - name: Ubuntu
       versions:
-        - precise
+        - Precise
+        - Trusty
   categories:
     - system
 dependencies: []
+version: 2.0.0
