--- a/tests/test.yml
+++ b/tests/test.yml
@@ -1,8 +1,6 @@
 ---
 - hosts: localhost
-  remote_user: root
-  vars:
-    app_path: /srv/{{ app_name }}
-    app_name: app
+  remote_user: ubuntu
+  gather_facts: false
   roles:
-    - {role: ansible-logrotate}
+    - ansible-logrotate
