--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,4 +1,3 @@
 app_name: test
 app_path: /home/ubuntu/test
-logrotate:
-  path: "{{ app_path }}/shared/log/*.log"
+logrotate_path: "{{ app_path }}/shared/log/*.log"
